do some stuff on contact section

--- a/index.html
+++ b/index.html
@@ -174,54 +174,41 @@
             <p style="text-align:center;">get in touch.</p>
             <div class="col">
                 <div class="row">
-                    <div class="row" id="contact1">
+                    <div class="row animate_when_almost_visible">
                         <i class="fab fa-instagram icon"></i>
-                        <div class="col">
-                            <a href="https://instagram.com/ahmadi__akbar" target="_blank">Instagram</a>
-                            <a href="https://instagram.com/ahmadi__akbar" target="_blank"
-                                id="content2">https://instagram.com/ahmadi__akbar</a>
-                        </div>
+                        <a class="padding15" href="https://instagram.com/ahmadi__akbar" target="_blank">Instagram</a>
                     </div>
-                    <div class="row" id="contact2">
+                    <div class="row">
                         <i class="fab fa-github icon"></i>
-                        <div class="col">
-                            <a href="https://github.com/ahmadi-akbar" target="_blank">GitHub</a>
-                            <a href="https://github.com/ahmadi-akbar" target="_blank"
-                                id="content1">https://github.com/ahmadi-akbar</a>
-                        </div>
+                        <a class="padding15" href="https://github.com/ahmadi-akbar" target="_blank">GitHub</a>
                     </div>
                     <div class="row" id="contact3">
                         <i class="fab fa-telegram icon"></i>
-                        <div class="col">
-                            <a href="https://t.me/ahmadi_akbar1" target="_blank">Telegram</a>
-                            <a href="https://t.me/ahmadi_akbar1" target="_blank"
-                                id="content3">https://t.me/ahmadi_akbar1</a>
-                        </div>
+                        <a class="padding15" href="https://t.me/ahmadi_akbar1" target="_blank">Telegram</a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="row" id="contact4">
+                    <div class="row">
                         <i class="fa fa-envelope icon"></i>
-                        <div class="col">
-                            <a href="mailto:ahmadi.akbar.1996@gmail.com">Email</a>
-                            <a href="mailto:ahmadi.akbar.1996@gmail.com" id="content6">ahmadi.akbar.1996@gmail.com</a>
-                        </div>
+                        <a class="padding15" href="mailto:ahmadi.akbar.1996@gmail.com">Email</a>
                     </div>
-                    <div class="row" id="contact5">
+
+                    <div class="row">
                         <i class="fa fa-map-marker icon"></i>
                         <div class="col">
                             <a>Address</a>
-                            <div id="content4">Tehran, Iran</div>
+                            <span class="smallText">Tehran, Iran</span>
                         </div>
                     </div>
-                    <div class="row" id="contact6">
+                    <div class="row">
                         <i class="fa fa-mobile icon"></i>
                         <div class="col">
                             <a>Phone Number</a>
-                            <div id="content5">+98 933 873 2975</div>
+                            <span class="smallText">+98 933 873 2975</span>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </div>
 
