--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
     <div class="sidenav animated bounceInDown" style="animation-delay:4s;">
-        <a id="homeTab" href="#" onclick="$('.main').moveTo(1)">home</a>
-        <a id="skillsTab" href="#" onclick="$('.main').moveTo(2)">skills</a>
-        <a id="worksTab" href="#" onclick="$('.main').moveTo(3)">works</a>
-        <a id="contactTab" href="#" onclick="$('.main').moveTo(4)">contact</a>
+        <a id="homeTab" href="#" class="navTabActive" onclick="moveTo(1)">home</a>
+        <a id="skillsTab" href="#" class="navTab" onclick="moveTo(2)">skills</a>
+        <a id="worksTab" href="#" class="navTab" onclick="moveTo(3)">works</a>
+        <a id="contactTab" href="#" class="navTab" onclick="moveTo(4)">contact</a>
     </div>
     <div class="main">
         <div id="loading">
@@ -46,7 +46,13 @@
             </div>
         </section>
         <section id="skill" class="padding">
-            <p>skills.</p>
+            <div class="row" style="align-items: baseline">
+                <p>skills.</p>
+                <div class="row">
+                    <a href="#" id="web-btn" class="secTab secTabActive" onclick="showWeb()">web work.</a>
+                    <a href="#" id="des-btn" class="secTab" onclick="showDes()">ui/ux.</a>
+                </div>
+            </div>
             <p>
                 <h2><i class="fas fa-code"></i> Frontend Development</h2>
                 <table>
@@ -117,64 +123,89 @@
             <p></p>
         </section>
         <section id="work" class="padding">
-            <p>works.</p>
-            <h1><span id="web-btn" style="border-bottom:3px solid #000;" onclick="showweb()">web
-                    work.</span>
-                <span onclick="showdes()" id="des-btn">ui/ux.</span></h1>
-            <div id="web">
-                <div class="project">
-                    <h1>gitfolio</h1>
-                    <h3>personal website + blog for every github user</h3>
-                    <a href="https://imfunniee.github.io/gitfolio/" target="_blank"><button>visit <i
-                                class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                    <a href="https://github.com/imfunniee/gitfolio" target="_blank"><button><i
-                                class="fas fa-code right-arrow"></i> code</button></a>
+            <div class="row" style="align-items: baseline">
+                <p>works.</p>
+                <div class="row">
+                    <a href="#" id="web-btn" class="secTab secTabActive" onclick="showWeb()">web work.</a>
+                    <a href="#" id="des-btn" class="secTab" onclick="showDes()">ui/ux.</a>
                 </div>
-
-                <div class="project">
-                    <h1>gitark</h1>
-                    <h3>dark theme for github</h3>
-                    <a href="https://chrome.google.com/webstore/detail/gitark/pajmlahbnmcmbfdmmcacaojpedjcdjgm"
-                        target="_blank"><button>visit <i
-                                class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
-                    <a href="https://github.com/imfunniee/gitark" target="_blank"><button><i
-                                class="fas fa-code right-arrow"></i> code</button></a>
+            </div>
+            <div class="scrolling-wrapper" id="web" style="padding-right: 2%;">
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe1</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe2</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe3</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe4</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
                 </div>
 
             </div>
-
-            <div id="design" style="display:none;">
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png">
+            <div class="scrolling-wrapper" id="design" style="padding-right: 2%; display: none;">
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
                 </div>
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_2x.png')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/5424125/youtube_2x.png">
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
                 </div>
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1.png')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/5389842/facebook1.png">
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
                 </div>
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_2x.png')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/5337203/web_1920___1_2x.png">
-                </div>
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/5334214/twitch_4x.png">
-                </div>
-                <div class="project"
-                    onclick="inlarge('https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif')">
-                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/5380746/srch.gif">
+                <div class="card">
+                    <img src="https://cdn.dribbble.com/users/2574485/screenshots/6191588/nike.png" alt="Avatar"
+                        style="width:100%">
+                    <div class="container">
+                        <h4><b>John Doe</b></h4>
+                        <h4>Architect & Engineer</h4>
+                    </div>
                 </div>
             </div>
+
         </section>
         <section id="secContact" class="padding">
             <p style="text-align:center;">get in touch.</p>
             <div class="col">
                 <div class="row">
-                    <div class="row animate_when_almost_visible">
+                    <div class="row">
                         <i class="fab fa-instagram icon"></i>
                         <a class="padding15" href="https://instagram.com/ahmadi__akbar" target="_blank">Instagram</a>
                     </div>
@@ -195,14 +226,14 @@
 
                     <div class="row">
                         <i class="fa fa-map-marker icon"></i>
-                        <div class="col">
+                        <div class="col" style="margin-left:1vw;">
                             <a>Address</a>
                             <span class="smallText">Tehran, Iran</span>
                         </div>
                     </div>
                     <div class="row">
                         <i class="fa fa-mobile icon"></i>
-                        <div class="col">
+                        <div class="col" style="margin-left:1vw;">
                             <a>Phone Number</a>
                             <span class="smallText">+98 933 873 2975</span>
                         </div>
